--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <head>
     <title>Dice Game</title>
     <script src="gameLogic.js"></script>
-    
+
+    <!-- meta tag for pwa -->
+    <meta name="full-screen" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Your App Name">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
 </head>
 
 <body>
